--- a/Description
+++ b/Description
@@ -16,25 +16,28 @@ The main goal is to identify hypothalamus celltypes and investigate sub-populati
 
 ### Merging samples
 Computational performance of two ways for merging the samples were analysed, the first aggregating sample with cellranger aggr. The second using Serat function merge.
-
 ![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiRRiUq-rF_ePp4cU2obk5zRtZ6b0RFbBrtvtnFeq_DLuzZ1gFOUEFBpYTrlEya9wPWfl7dcNtPgM2trXw9SnJeQl6flGU4cSekk2zo9IMaJ-qSAz-WH9DjuvItnVGg540B8nbL5fs37NAH_JFaxedc4-TPOLOCmLUYPqqtzw0lnCeOWe02p9lBmRjTyhQ/s3779/DimPlot_comparisson_aggr_combined.png)
 
-
-### Analysis of RNA, ATAC and multimoda RNA+ATAC samples
+### Analysis of RNA, ATAC and multimodal RNA+ATAC samples
 A reference RNA expression map was used (top left figure) to identify the celltypes. Anchor cells were used to annotate ATAC map and to transfer annotation to multimodal RNA+ATAC map.
-
 ![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj7ZjmkAGlaVnro5rji3ynMWDHu8B28bdrcMmrV42YLuAEADUWC4yqxlx8GCivVDFWZYYA5DkxycIjnLwVZWBiZc73dz0cSl4LWfsqFcIp3m1PtytUqE_Vn_6Pi7IlUlEmW22d2NmJLglDWd_6-CUO-4TBcLwKHSMR8c7IVzlHsdRnTXfWJFSG4L5Ll73s/s1600/WhatsApp%20Image%202023-11-30%20at%2005.39.52.jpeg)
 
-### sn-RNA-seq vs. sn-ATAC-seq peak track
-![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiyAKrkkNiN4apyHcn6M32WX2vGaKSaRKkmUEhf_Vm-O_pYWEYcD8FmxvMTh1fqAtSSraad94VBg-rqKWGHbr6Y7gUks78BqjN8T0cLnW-_wFfd9i929YDrjV-TLbzyNNktVM81PPFWhas-u4ce3RD8BMWAtt6eRAdIdFsFoh-YYzsdVO9_ZsabZGXqctQ/s1600/WhatsApp%20Image%202023-12-08%20at%2004.09.56%20(1).jpeg)
-
-### Scheme for frequency of lineages
+### sn-RNA-seq exp. and sn-ATAC-seq peak track for celltypes
 All celltypes were considered for analysis as well as the corresponding markers identifying each. Noteworthy, Pdgfra is a good marker for OPCs in this testdata.
 ![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiyAKrkkNiN4apyHcn6M32WX2vGaKSaRKkmUEhf_Vm-O_pYWEYcD8FmxvMTh1fqAtSSraad94VBg-rqKWGHbr6Y7gUks78BqjN8T0cLnW-_wFfd9i929YDrjV-TLbzyNNktVM81PPFWhas-u4ce3RD8BMWAtt6eRAdIdFsFoh-YYzsdVO9_ZsabZGXqctQ/s1600/WhatsApp%20Image%202023-12-08%20at%2004.09.56%20(1).jpeg)
 
-### Principal component of samples per lineage
+### UMAPs of neuronal cells
+We next investigated sub-popualations of neuronal cells. In the paper describind the data [1], authors described 33 neuronal su-bpopulations using 6 mouse samples and 100% of the filtered cells. In our test case, ~17 clusters are seen.
+![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj0ekzzRaYkGnAkd3jzQ6TQR8q9qe4glYkTivGz-j9RuqxhGdJYv524U4rUJgHuqVPfTaKadqs4aAMRYhoO9NlqNb4SMCqciVU5LpdblkoN2jSbtkWwSkRyfWzWAWdmo5eNSPaLs0Ui1fxl_CcOPXVuK8RZU2VkGN5QoHobBNrMsMYZdNilomAYS7zo7b0/s1600/WhatsApp%20Image%202023-12-06%20at%2012.34.52%20(1).jpeg)
 
-![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiwOwkFtnVUK5QNCzPX_kOlf_p50Xv1sMwOTdOykSHcu0W6Fd8_iyBVk5qVGNPKH5bVGwXMAZZwGoFtHyvB_gYGDIpoBPCWcwe-XGY5b4plW7KJJXMMyYCJngZq1RDLKr5wOfbtKD7RDr7Qv0ZtRu6ZoiPQs4TkeI-kwbY-hJ39K_FeJGx3HI3yWsKg/s2400/PCA_lineages.png)
+### Clusters of neuronal cells
+Neuronal cells were sublected for clusterring and further investigation.
+![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj-QNdCjidcGhZUtM8cs5LxGCiVdqEBRRdzgaBbQDRSeXGi2P4ai_lgY89Kxk13lwFDYiFP04gdvZddP_bQuQhd48NbMRQui8TV-xFD_UwM2yS325TTIx6wc8o42xwaTMxm3n-hf6O0pq4hhp_Xd7qQwCkZYs1ozy5ALJAWn2PNs7mCMEfZW3bjxs-Cxy0/s1600/WhatsApp%20Image%202023-12-06%20at%2015.49.02.jpeg)
 
-### Outlier analyses
-![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgk5kpxFmwYklOj-nrhCM14cGBZsR1hDfbuR8bkz3wFsXmcjSEDOyzGyUx7imVB2BqmHeIreAOSmoAoBdlY6HipS_KQLjP0qR7xM4HX9EXqa56jBZ8FVLFK4fa-SOVPdnVlauxnHSXk_IaAjI15obAU6_0NH0C5JW-haTSC356Xw-546asFB3naoW1O/s2400/PCA_outliners.png)
+### sn-RNA-seq exp. and sn-ATAC-seq peak track for neuronal clusters
+Neuronal sub-poppulations were investigated for magnocellular population using markers Oxt, Avp and Caprin2. Interesting, clusters 9 and 10 show both, differential ATAC peaks and differential RNA expr.
+![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjFYH9giY0Cr217eXCMdLjweQT8F78zZh6q8dVhVBzwUyy2wpl9C3D_HNo-FY9fk8JG_4iWrF12xExHqWwcFIp7Oxqp7JoeCFmQZ4P8gHa-pxLXNGAhGDt6gcWP66CQUT91WYd5jE9OMSil5ZGqadYpfun7WE_tu2cbf-p4RF9LOrr2hx9LgSDlTYsIdEM/s1600/WhatsApp%20Image%202023-12-07%20at%2007.32.07%20(1).jpeg)
+
+### Investigating magnocellular population among neuronal cells
+Noteworthy, clusters 9 and 10 can be considered for further investigation for magnocellular populations.
+![](https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiXiMA9LU7fJzyhbbaiexFzwh2pv2SKeC2PsBLLXuWrCcMOgYn9yXAhk3dV3nwHbxuQ5iuMf8ZYtPgic2AYTK3n0Ah-3fJ6kpLrEgCxPmHReUqrTcPySmWj1GbVt89FEzfPLTtUufzNLZGVg7lmba9Y7rkJnuUufKAUhh9MR3YzsULhB7rcRrzyyd4IwCw/s1600/WhatsApp%20Image%202023-12-07%20at%2011.03.33.jpeg)
